# awesome_wotlk

./: .gitignore  CMakeLists.txt  Cargo.toml  README-rust.md  build.sh  mingw-toolchain.cmake
src/: main.rs  patches.rs  pe_patcher.rs  ui.rs
src/AwesomeWotlkPatch/: CMakeLists.txt  Main.cpp  Utils.h
src/lib/: bug_fixes.rs  command_line.rs  entry.rs  enums.rs  game_client.rs  hooks.rs  inventory.rs  misc.rs  mod.rs  name_plates.rs  unit_api.rs  utils.rs
