cmake_minimum_required(VERSION 3.15)
project(AwesomeWotlk)

set(CMAKE_DISABLE_SOURCE_CHANGES ON)
set(CMAKE_DISABLE_IN_SOURCE_BUILD ON)
set(CMAKE_SUPPRESS_REGENERATION ON)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/build/${CMAKE_BUILD_TYPE}/)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/build/${CMAKE_BUILD_TYPE}/)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/build/${CMAKE_BUILD_TYPE}/)

# Compiler configuration
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Common compile definitions
set(COMMON_COMPILE_DEFINITIONS WIN32_LEAN_AND_MEAN _CRT_SECURE_NO_WARNINGS UNICODE _UNICODE)

if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU" AND CMAKE_SYSTEM_NAME STREQUAL "Windows")
	# MinGW cross-compilation
	set(CMAKE_CXX_FLAGS_RELEASE "-O2 -DNDEBUG -static-libgcc -static-libstdc++")
	set(CMAKE_CXX_FLAGS_DEBUG "-g -DDEBUG -static-libgcc -static-libstdc++")
	set(CMAKE_EXE_LINKER_FLAGS "-static")
	set(CMAKE_SHARED_LINKER_FLAGS "-static")
elseif (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
	# Clang with MSVC flags
	set(COMMON_COMPILE_FLAGS "/DWIN32_LEAN_AND_MEAN /D_CRT_SECURE_NO_WARNINGS /DUNICODE /D_UNICODE")
	set(CMAKE_CXX_FLAGS_RELEASE "${COMMON_COMPILE_FLAGS} /O2 /Gw -flto /DNDEBUG /MT")
	set(CMAKE_CXX_FLAGS_DEBUG "${COMMON_COMPILE_FLAGS} /Od /Zi /DDEBUG /MTd")
elseif(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
	# MSVC flags
	set(COMMON_COMPILE_FLAGS "/DWIN32_LEAN_AND_MEAN /D_CRT_SECURE_NO_WARNINGS /DUNICODE /D_UNICODE")
	set(CMAKE_CXX_FLAGS_RELEASE "${COMMON_COMPILE_FLAGS} /O2 /Gw /GL /wd4458 /DNDEBUG /MT")
	set(CMAKE_CXX_FLAGS_DEBUG "${COMMON_COMPILE_FLAGS} /Od /Zi /wd4458 /DDEBUG /MTd")
else()
	message(WARNING "Unsupported toolset: ${CMAKE_CXX_COMPILER_ID}, trying generic configuration")
endif()

# Apply common definitions to all targets
add_compile_definitions(${COMMON_COMPILE_DEFINITIONS})


add_subdirectory( deps )
add_subdirectory( src )